# iRockProgrammer

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release-raspberrypi.yml  release.yml
src/: flash.rs  hardware.rs  main.rs  self_update_mod.rs
