[package]
name = "iRockProgrammer"
version = "0.1.0"
edition = "2024"

[dependencies]
cursive = "0.21.1"
dotenvy_macro = "0.15.7"
octocrab = "0.44.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
self_update = "0.42.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
