[package]
name = "iRockProgrammer"
version = "0.1.2"
edition = "2024"
authors = ["Joscha Wagner <joscha.wagner@example.com>"]

[dependencies]
nix = { version = "0.30.1", features = ["process"] }
octocrab = "0.44.1"
reqwest = { version = "0.12", features = ["json"] }
self_update = "0.42.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tempfile = "3.20.0"
futures-util = "0.3"
eframe = "0.32.0"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]


[package.metadata.bundle]
name = "iRock Programmer"
description = "Programmiere iRock Mobile Geräte"
icon = ["logo.png"]
category = "Development"
long_description = "Programmiere iRock Mobile Geräte"
identifier = "com.dilocker.irockprogrammer"
exec = "iRockProgrammer"
